k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-eks-app
  labels:
    app: node-eks-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-eks-app
  template:
    metadata:
      labels:
        app: node-eks-app
    spec:
      containers:
        - name: node-eks-app
          image: IMAGE_PLACEHOLDER   # replaced by Jenkins
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
