k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-eks-service
spec:
  type: ClusterIP
  selector:
    app: node-eks-app
  ports:
    - port: 80
      targetPort: 3000
